2002-02-05  Marian Eichholz <eichholz@computer.org>
	* every file reworked for opaque instance data structure
	* parameter setting function are still missing
	* everything compiles again

2002-01-06  Marian Eichholz <eichholz@computer.org>
	* config.h, configure.in make checks for libtiff.
	* linking with libtiff.

2002-01-05  Marian Eichholz <eichholz@computer.org>
	* fighting with autotools