@@ -1,0 +1,3 @@
+G4TOOL=../../src/g4tool
+
+echo ok.
