@@ -1,3 +1,9 @@
+2002-02-07  Marian Eichholz <eichholz@computer.org>
+	* some fixes in tiff2bacon.c ("this->")
+	* same fixes in pcl.c
+	* make check enabled
+	* man pages for tiff2bacon and g4tool
+
 2002-02-05  Marian Eichholz <eichholz@computer.org>
 	* every file reworked for opaque instance data structure
 	* parameter setting function are still missing
